--- a/pages/articulo.html
+++ b/pages/articulo.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link text-dark" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="Articulo.html">Añadir</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="articulo.html">Añadir</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="historial.html">Historial</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="configuracion.html">Configuración</a></li>
                 </ul>
@@ -29,7 +29,7 @@
 
     <div class="container mt-5">
         <h1 class="h3 mb-4">Añadir Artículo</h1>
-        <form>
+        <form id="add-item-form">
             <div class="mb-3">
                 <label for="item-name" class="form-label">Nombre del Artículo</label>
                 <input type="text" class="form-control" id="item-name" placeholder="Nombre del artículo">
@@ -46,6 +46,7 @@
         </form>
     </div>
 
+    <script src="/js/articulo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
