--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Compras</title>
-    <!-- Enlace al manifiesto -->
     <link rel="manifest" href="/manifest.json">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -31,49 +30,12 @@
     <div class="container mt-4">
         <h1 class="mb-4">Lista de Compras</h1>
 
-        <div class="list-group">
-            <!-- Item de Compras -->
-            <div class="list-group-item d-flex align-items-center justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img src="https://storage.googleapis.com/a1aa/image/4XhtPT5DyII8IB8Z4nmfUW8AcBZWraM1aAZeyVWOcmkY8a2TA.jpg" alt="Manzana" class="me-3" style="width: 50px; height: 50px;">
-                    <span>Manzana</span>
-                </div>
-                <div>
-                    <button class="btn btn-success btn-sm me-1"><i class="fas fa-check"></i></button>
-                    <button class="btn btn-warning btn-sm me-1"><i class="fas fa-edit"></i></button>
-                    <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button>
-                </div>
-            </div>
-
-            <!-- Agregar más items aquí -->
-            <div class="list-group-item d-flex align-items-center justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img src="https://storage.googleapis.com/a1aa/image/TUoJob9l9nItOlay7qhQl9IfIZJ0kXJSnYV8bX7Fi9KKea2TA.jpg" alt="Pan" class="me-3" style="width: 50px; height: 50px;">
-                    <span>Pan</span>
-                </div>
-                <div>
-                    <button class="btn btn-success btn-sm me-1"><i class="fas fa-check"></i></button>
-                    <button class="btn btn-warning btn-sm me-1"><i class="fas fa-edit"></i></button>
-                    <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button>
-                </div>
-            </div>
+        <div class="list-group" id="item-list">
+            <!-- Los artículos se cargarán aquí dinámicamente -->
         </div>
     </div>
 
-    <script>
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
-                    .then(registration => {
-                        console.log('Service Worker registrado con éxito:', registration);
-                    })
-                    .catch(error => {
-                        console.log('Error al registrar el Service Worker:', error);
-                    });
-            });
-        }
-    </script>
-    
+    <script src="/js/index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
