--- a/pages/historial.html
+++ b/pages/historial.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historial - Lista de Compras</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/historial.css">
+    <title>Historial de Compras</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="bg-light">
-
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Lista de Compras</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,82 +17,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="articulo.html">Añadir</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="historial.html">Historial</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="configuracion.html">Configuración</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="articulo.html">Añadir</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="historial.html">Historial</a></li>
+                    <li class="nav-item"><a class="nav-link" href="configuracion.html">Configuración</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Historial Section -->
-    <div class="container mt-5">
-        <h1 class="h3 mb-4">Historial de Compras</h1>
-
-        <!-- Historial de compras de la fecha 2023-10-01 -->
-        <div class="bg-white p-4 rounded-lg shadow-sm mb-4">
-            <h2 class="h4 font-weight-bold mb-4">Fecha: 2023-10-01</h2>
-            
-            <!-- Item 1 -->
-            <div class="d-flex align-items-center mb-3">
-                <img src="https://storage.googleapis.com/a1aa/image/4WEBJ11j5jomBh7qmv8qrDHcZpHdcmchUWF5g6LeVlaRhN7JA.jpg" alt="Imagen de una manzana roja" class="img-fluid rounded" style="width: 50px; height: 50px;">
-                <div class="ms-3">
-                    <span>Manzana</span>
-                </div>
-                <div class="ms-auto">
-                    <button class="btn btn-primary">
-                        <i class="fas fa-redo"></i> Reagregar
-                    </button>
-                </div>
-            </div>
-
-            <!-- Item 2 -->
-            <div class="d-flex align-items-center mb-3">
-                <img src="https://storage.googleapis.com/a1aa/image/tuJhQB7d117pBpTP5aGESAPWXOjek5KFt0S54JMe59yjCb2TA.jpg" alt="Imagen de un paquete de pan" class="img-fluid rounded" style="width: 50px; height: 50px;">
-                <div class="ms-3">
-                    <span>Pan</span>
-                </div>
-                <div class="ms-auto">
-                    <button class="btn btn-primary">
-                        <i class="fas fa-redo"></i> Reagregar
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Historial de compras de la fecha 2023-09-25 -->
-        <div class="bg-white p-4 rounded-lg shadow-sm">
-            <h2 class="h4 font-weight-bold mb-4">Fecha: 2023-09-25</h2>
-            
-            <!-- Item 1 -->
-            <div class="d-flex align-items-center mb-3">
-                <img src="https://storage.googleapis.com/a1aa/image/hsGFsAGmeflgHkCeoJQmb3wpHLN8rtUt8WlF0FQfoymWKsZPB.jpg" alt="Imagen de una botella de leche" class="img-fluid rounded" style="width: 50px; height: 50px;">
-                <div class="ms-3">
-                    <span>Leche</span>
-                </div>
-                <div class="ms-auto">
-                    <button class="btn btn-primary">
-                        <i class="fas fa-redo"></i> Reagregar
-                    </button>
-                </div>
-            </div>
-
-            <!-- Item 2 -->
-            <div class="d-flex align-items-center mb-3">
-                <img src="https://storage.googleapis.com/a1aa/image/flT2Msib5g27FyqnYyepQzmeGyGkcS6pdJQ6TbvofSvYKsZPB.jpg" alt="Imagen de un paquete de arroz" class="img-fluid rounded" style="width: 50px; height: 50px;">
-                <div class="ms-3">
-                    <span>Arroz</span>
-                </div>
-                <div class="ms-auto">
-                    <button class="btn btn-primary">
-                        <i class="fas fa-redo"></i> Reagregar
-                    </button>
-                </div>
-            </div>
+    <div class="container mt-4">
+        <h1 class="mb-4">Historial de Compras</h1>
+        <div class="container">
+            <!-- Los artículos del historial se cargarán aquí dinámicamente -->
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/historial.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
