--- a/pages/informacion.html
+++ b/pages/informacion.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/configuracion.css">
+    <link rel="stylesheet" href="/css/informacion.css">
 </head>
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
@@ -22,25 +22,28 @@
                     <a class="nav-link text-dark" href="historial.html">Historial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="configuracion.html">Configuración</a>
+                    <a class="nav-link text-dark" href="informacion.html">Información</a>
                 </li>
             </ul>
         </div>
     </nav>
+    
     <div class="container mt-5">
-        <h1 class="text-2xl font-bold mb-4">Configuración</h1>
+        <h1 class="text-2xl font-bold mb-4">Información</h1>
         <div class="bg-white p-4 rounded shadow-sm">
-            <div class="mb-4">
-                <label class="form-label" for="notifications-toggle">Notificaciones Push</label>
-                <div class="d-flex align-items-center">
-                    <span class="me-2">Desactivadas</span>
-                    <label class="switch">
-                        <input type="checkbox" id="notifications-toggle">
-                        <span class="slider round"></span>
-                    </label>
-                    <span class="ms-2">Activadas</span>
-                </div>
-            </div>
+            <h3 class="mb-4">Información sobre la aplicación</h3>
+            <p><strong>Lista de Compras</strong> es una aplicación web diseñada para ayudarte a gestionar tus compras de manera eficiente. Con esta aplicación puedes:</p>
+            <ul>
+                <li>Crear y gestionar tu lista de compras.</li>
+                <li>Añadir artículos fácilmente con su nombre y cantidad.</li>
+                <li>Ver un historial de tus compras pasadas.</li>
+                <li>Personalizar la configuración para mejorar tu experiencia.</li>
+            </ul>
+            <p>La aplicación te permitirá mantener tu lista organizada y realizar un seguimiento de tus compras para una gestión más eficiente de tus necesidades diarias.</p>
+
+            <h3 class="mt-4">Código Fuente</h3>
+            <p>El código fuente completo de esta aplicación está disponible en nuestro repositorio de GitHub. Puedes acceder al repositorio haciendo clic en el siguiente enlace:</p>
+            <a href="https://github.com/tu-usuario/lista-de-compras" target="_blank" class="btn btn-primary">Ver el código fuente en GitHub</a>
         </div>
     </div>
 </body>
