--- a/pages/articulo.html
+++ b/pages/articulo.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="nav-link text-dark" href="index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="articulo.html">Añadir</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="historial.html">Historial</a></li>
-                    <li class="nav-item"><a class="nav-link text-dark" href="configuracion.html">Configuración</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="informacion.html">Información</a></li>
                 </ul>
             </div>
         </div>
