--- a/pages/historial.html
+++ b/pages/historial.html
@@ -20,7 +20,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="articulo.html">Añadir</a></li>
                     <li class="nav-item"><a class="nav-link active" href="historial.html">Historial</a></li>
-                    <li class="nav-item"><a class="nav-link" href="configuracion.html">Configuración</a></li>
+                    <li class="nav-item"><a class="nav-link" href="informacion.html">Información</a></li>
                 </ul>
             </div>
         </div>
